--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "scripts": {
     "build": "rollup -c rollup.config.ts --configPlugin swc3 --bundleConfigAsCjs",
     "prepublishOnly": "npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint --format=sukka .",
+    "test": "mocha --require @swc-node/register test/index.ts",
+    "test:update": "mocha --update --require @swc-node/register test/index.ts"
   },
   "keywords": [
     "css",
@@ -42,21 +44,32 @@
   "devDependencies": {
     "@eslint-sukka/node": "^5.1.0",
     "@eslint-sukka/ts": "^5.1.0",
+    "@swc-node/register": "^1.8.0",
     "@swc/core": "^1.4.1",
     "@types/babel__core": "^7.20.5",
+    "@types/chai": "^4.3.11",
     "@types/loader-utils": "^2.0.6",
+    "@types/mocha": "^10.0.6",
+    "chai": "^4.4.1",
     "eslint": "^8.56.0",
     "eslint-config-sukka": "^5.1.0",
     "eslint-formatter-sukka": "^5.1.0",
+    "memfs": "^4.7.0",
+    "mocha": "^10.3.0",
+    "mocha-chai-jest-snapshot": "^1.1.4",
     "next": "^14.1.0",
     "rollup": "^4.10.0",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-swc3": "^0.11.0",
+    "swc-loader": "^0.2.6",
     "typescript": "^5.3.3",
     "webpack": "^5.90.1"
   },
   "peerDependencies": {
     "@stylexjs/stylex": "*"
+  },
+  "overrides": {
+    "chai": "$chai"
   }
 }
