feat: finish all

--- a/package.json
+++ b/package.json
@@ -51,10 +51,12 @@
     "@types/loader-utils": "^2.0.6",
     "@types/mocha": "^10.0.6",
     "chai": "^4.4.1",
+    "css-loader": "^6.10.0",
     "eslint": "^8.56.0",
     "eslint-config-sukka": "^5.1.0",
     "eslint-formatter-sukka": "^5.1.0",
     "memfs": "^4.7.0",
+    "mini-css-extract-plugin": "^2.8.0",
     "mocha": "^10.3.0",
     "mocha-chai-jest-snapshot": "^1.1.4",
     "next": "^14.1.0",
