--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -21,30 +21,29 @@ jobs:
       id-token: write
     steps:
       - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v2
       - name: Setup node
         uses: actions/setup-node@v4
         with:
           node-version: 20
           check-latest: true
-          cache: 'pnpm'
+          cache: 'npm'
           registry-url: 'https://registry.npmjs.org'
       - name: Install the latest npm
         run: npm install -g npm
       - name: Install dependencies
-        run: pnpm install
+        run: npm install
       - name: Run build
-        run: pnpm run build
+        run: npm run build
       - name: Run lint
-        run: pnpm run lint
+        run: npm run lint
       - name: Publish
         run: |
           if git log -1 --pretty=%B | grep "^release: [0-9]\+\.[0-9]\+\.[0-9]\+$";
           then
-            pnpm -r publish --provenance --access public
+            npm publish --provenance --access public
           elif git log -1 --pretty=%B | grep "^release: [0-9]\+\.[0-9]\+\.[0-9]\+";
           then
-            pnpm -r publish --provenance --access public --tag next
+            npm publish --provenance --access public --tag next
           else
             echo "Not a release, skipping publish"
           fi
