--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/chai": "^4.3.11",
     "@types/loader-utils": "^2.0.6",
     "@types/mocha": "^10.0.6",
+    "@types/node": "^20.11.17",
     "bumpp": "^9.3.0",
     "chai": "^4.4.1",
     "css-loader": "^6.10.0",
