chore: housekeeping & make eslint happy

--- a/package.json
+++ b/package.json
@@ -48,47 +48,47 @@
   "author": "Sukka <https://skk.moe>",
   "license": "MIT",
   "dependencies": {
-    "@babel/core": "^7.24.4",
-    "@babel/plugin-syntax-jsx": "^7.24.1",
-    "@babel/plugin-syntax-typescript": "^7.24.1",
-    "@stylexjs/babel-plugin": "^0.5.1",
-    "loader-utils": "^3.2.1",
+    "@babel/core": "^7.26.0",
+    "@babel/plugin-syntax-jsx": "^7.25.9",
+    "@babel/plugin-syntax-typescript": "^7.25.9",
+    "@stylexjs/babel-plugin": "^0.9.3",
+    "loader-utils": "^3.3.1",
     "rollup": "^4.14.0"
   },
   "devDependencies": {
-    "@eslint-sukka/node": "^5.1.2",
-    "@eslint-sukka/ts": "^5.1.2",
-    "@swc-node/register": "^1.9.0",
-    "@swc/core": "^1.4.12",
+    "@eslint-sukka/node": "^6.12.0",
+    "@swc-node/register": "^1.10.9",
+    "@swc/core": "^1.10.1",
     "@types/babel__core": "^7.20.5",
     "@types/chai": "^4.3.14",
     "@types/loader-utils": "^2.0.6",
-    "@types/mocha": "^10.0.6",
-    "@types/node": "^20.12.4",
-    "browserslist": "^4.23.0",
-    "bumpp": "^9.4.0",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^22.10.2",
+    "browserslist": "^4.24.3",
+    "bumpp": "^9.9.1",
     "chai": "^4.4.1",
     "css-loader": "^6.10.0",
-    "eslint": "^8.57.0",
-    "eslint-config-sukka": "^5.1.2",
-    "eslint-formatter-sukka": "^5.1.2",
-    "memfs": "^4.8.1",
-    "mini-css-extract-plugin": "^2.8.1",
-    "mocha": "^10.4.0",
-    "mocha-chai-jest-snapshot": "^1.1.4",
-    "next": "^14.1.4",
-    "postcss": "^8.4.38",
-    "rimraf": "^5.0.5",
+    "eslint": "^9.17.0",
+    "eslint-config-sukka": "^6.12.0",
+    "eslint-formatter-sukka": "^6.12.0",
+    "memfs": "^4.15.0",
+    "mini-css-extract-plugin": "^2.9.2",
+    "mocha": "^11.0.1",
+    "mocha-chai-jest-snapshot": "^1.1.6",
+    "next": "^15.1.0",
+    "postcss": "^8.4.49",
+    "rimraf": "^6.0.1",
     "rollup-plugin-copy": "^3.5.0",
-    "rollup-plugin-dts": "^6.1.0",
-    "rollup-plugin-swc3": "^0.11.0",
+    "rollup-plugin-dts": "^6.1.1",
+    "rollup-plugin-swc3": "^0.12.1",
     "swc-loader": "^0.2.6",
-    "typescript": "^5.4.4",
-    "webpack": "^5.91.0"
+    "typescript": "^5.7.2",
+    "webpack": "^5.97.1"
   },
   "peerDependencies": {
     "@stylexjs/stylex": "*"
   },
+  "packageManager": "pnpm@9.15.0",
   "overrides": {
     "chai": "$chai"
   }
