--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@babel/plugin-syntax-jsx": "^7.25.9",
     "@babel/plugin-syntax-typescript": "^7.25.9",
     "@stylexjs/babel-plugin": "^0.9.3",
+    "@types/webpack": "^5.28.5",
     "loader-utils": "^3.3.1",
     "rollup": "^4.14.0"
   },
