--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@babel/plugin-syntax-typescript": "^7.27.1",
     "@stylexjs/babel-plugin": "^0.9.3",
     "@types/webpack": "^5.28.5",
+    "foxts": "^3.12.0",
     "loader-utils": "^3.3.1",
     "rollup": "^4.49.0"
   },
