--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "@types/webpack": "^5.28.5",
     "foxts": "^3.12.0",
     "loader-utils": "^3.3.1",
-    "rollup": "^4.50.0"
+    "rollup": "^4.50.0",
+    "webpack-virtual-modules": "^0.6.2"
   },
   "devDependencies": {
     "@eslint-sukka/node": "^6.23.1",
