--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "foxts": "^3.12.0",
     "loader-utils": "^3.3.1",
     "rollup": "^4.50.0",
+    "ts-dedent": "^2.2.0",
     "webpack-virtual-modules": "^0.6.2"
   },
   "devDependencies": {
