--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -21,21 +21,18 @@ jobs:
       id-token: write
     steps:
       - uses: actions/checkout@v4
-      - name: Setup node
-        uses: actions/setup-node@v4
+      - uses: pnpm/action-setup@v4
         with:
-          node-version: 20
+          run_install: false
+      - uses: actions/setup-node@v4
+        with:
+          node-version-file: '.node-version'
           check-latest: true
-          cache: 'npm'
+          cache: 'pnpm'
           registry-url: 'https://registry.npmjs.org'
-      - name: Install the latest npm
-        run: npm install -g npm
-      - name: Install dependencies
-        run: npm install
-      - name: Run build
-        run: npm run build
-      - name: Run lint
-        run: npm run lint
+      - run: npm install -g npm
+      - run: pnpm install
+      - run: pnpm run prerelease
       - name: Publish
         run: |
           if git log -1 --pretty=%B | grep "^release: [0-9]\+\.[0-9]\+\.[0-9]\+$";
