--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "./stylex.css": "./dist/stylex.css"
   },
   "scripts": {
-    "prebuild": "rimraf dist",
+    "prebuild": "premove dist",
     "build": "rollup -c rollup.config.ts --configPlugin swc3 --bundleConfigAsCjs",
     "lint": "eslint --format=sukka .",
     "test": "mocha --require @swc-node/register --require mocha-expect-snapshot test/index.ts",
@@ -49,48 +49,48 @@
   "author": "Sukka <https://skk.moe>",
   "license": "MIT",
   "dependencies": {
-    "@babel/core": "^7.28.4",
+    "@babel/core": "^7.28.5",
     "@babel/plugin-syntax-jsx": "^7.27.1",
     "@babel/plugin-syntax-typescript": "^7.27.1",
     "@types/webpack": "^5.28.5",
-    "foxts": "^3.13.0",
+    "foxts": "^5.0.0",
     "loader-utils": "^3.3.1"
   },
   "devDependencies": {
-    "@eslint-sukka/node": "^7.0.2",
+    "@eslint-sukka/node": "^8.0.2",
     "@rollup/plugin-json": "^6.1.0",
     "@swc-node/register": "^1.11.1",
-    "@swc/core": "^1.13.5",
+    "@swc/core": "^1.15.0",
     "@types/babel__core": "^7.20.5",
     "@types/loader-utils": "^3.0.0",
     "@types/mocha": "^10.0.10",
-    "@types/node": "^22.18.3",
-    "browserslist": "^4.26.0",
-    "bumpp": "^10.2.3",
+    "@types/node": "^22.19.0",
+    "browserslist": "^4.27.0",
+    "bumpp": "^10.3.1",
     "css-loader": "^7.1.2",
-    "eslint": "^9.35.0",
-    "eslint-config-sukka": "^7.0.2",
-    "eslint-formatter-sukka": "^7.0.2",
-    "expect": "^30.1.2",
-    "memfs": "^4.39.0",
+    "eslint": "^9.39.1",
+    "eslint-config-sukka": "^8.0.2",
+    "eslint-formatter-sukka": "^8.0.2",
+    "expect": "^30.2.0",
+    "memfs": "^4.50.0",
     "mini-css-extract-plugin": "^2.9.4",
-    "mocha": "^11.7.2",
+    "mocha": "^11.7.5",
     "mocha-expect-snapshot": "^8.0.0",
-    "next": "^15.5.3",
+    "next": "^15.5.6",
     "postcss": "^8.5.6",
-    "rimraf": "^6.0.1",
-    "rollup": "^4.50.1",
+    "premove": "^4.0.0",
+    "rollup": "^4.52.5",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-dts": "^6.2.3",
     "rollup-plugin-swc3": "^0.12.1",
     "swc-loader": "^0.2.6",
-    "typescript": "^5.9.2",
-    "webpack": "^5.101.3"
+    "typescript": "^5.9.3",
+    "webpack": "^5.102.1"
   },
   "peerDependencies": {
     "@stylexjs/babel-plugin": "*"
   },
-  "packageManager": "pnpm@10.16.0",
+  "packageManager": "pnpm@10.20.0",
   "pnpm": {
     "overrides": {
       "eslint>chalk": "npm:picocolors@^1.1.1"
