--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "@eslint-sukka/node": "^8.0.2",
     "@rollup/plugin-json": "^6.1.0",
     "@swc-node/register": "^1.11.1",
-    "@swc/core": "^1.15.0",
+    "@swc/core": "^1.15.1",
     "@types/babel__core": "^7.20.5",
     "@types/loader-utils": "^3.0.0",
     "@types/mocha": "^10.0.10",
@@ -79,7 +79,7 @@
     "next": "^15.5.6",
     "postcss": "^8.5.6",
     "premove": "^4.0.0",
-    "rollup": "^4.52.5",
+    "rollup": "^4.53.1",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-dts": "^6.2.3",
     "rollup-plugin-swc3": "^0.12.1",
@@ -96,6 +96,7 @@
       "eslint>chalk": "npm:picocolors@^1.1.1"
     },
     "onlyBuiltDependencies": [
+      "@swc/core",
       "oxc-resolver"
     ]
   }
